turbopack/crates/turbo-tasks-macros-tests/tests/derive_resolved_value/fail_underconstrained_generic.stderr
error[E0277]: the trait bound `T: ResolvedValue` is not satisfied
 --> tests/derive_resolved_value/fail_underconstrained_generic.rs:7:12
  |
7 |     value: T,
  |            ^ the trait `ResolvedValue` is not implemented for `T`
  |
note: required by a bound in `DeriveResolvedValueAssertion::<T>::assert_impl_ResolvedValue`
 --> tests/derive_resolved_value/fail_underconstrained_generic.rs:5:10
  |
5 | #[derive(ResolvedValue)]
  |          ^^^^^^^^^^^^^ required by this bound in `DeriveResolvedValueAssertion::<T>::assert_impl_ResolvedValue`
  = note: this error originates in the derive macro `ResolvedValue` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
  |
6 | struct ContainsUnderconstrainedGeneric<T: turbo_tasks::ResolvedValue> {
  |                                         ++++++++++++++++++++++++++++
